5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4351/executions/1884_3176.log
== SUBMITION (2019-07-04 18:35:03) 
-- CODE:
from numpy import*
nome=input("digite a string aqui: ").upper()
vogais=0
consoantes=0
for ch in nome:
	if (ch=="A" or ch=="E" or ch=="i" or ch=="O" or ch=="U"):
		vogais= vogais + 1
	else:
		consoantes=consoates + 1
print(vogais)
print(consoantes)
-- EXECUTION TIME:
0.922281
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1884/3176/main.py", line 9, in <module>
    consoantes=consoates + 1
NameError: name 'consoates' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 18:35:06) 
-- CODE:
from numpy import*
nome=input("digite a string aqui: ").upper()
vogais=0
consoantes=0
for ch in nome:
	if (ch=="A" or ch=="E" or ch=="i" or ch=="O" or ch=="U"):
		vogais= vogais + 1
	else:
		consoantes=consoates + 1
print(vogais)
print(consoantes)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-04 18:35:25) 
-- CODE:
from numpy import*
nome=input("digite a string aqui: ").upper()
vogais=0
consoantes=0
for ch in nome:
	if (ch=="A" or ch=="E" or ch=="i" or ch=="O" or ch=="U"):
		vogais= vogais + 1
	else:
		consoantes=consoantes + 1
print(vogais)
print(consoantes)
-- EXECUTION TIME:
1.02019
-- TEST CASE 1:
---- input:
cachorro
---- correct output:
3
5
---- user output:
3
5
-- TEST CASE 2:
---- input:
amazonia
---- correct output:
5
3
---- user output:
4
4
-- TEST CASE 3:
---- input:
qwrt
---- correct output:
0
4
---- user output:
0
4
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 18:35:25) 
-- CODE:
from numpy import*
nome=input("digite a string aqui: ").upper()
vogais=0
consoantes=0
for ch in nome:
	if (ch=="A" or ch=="E" or ch=="i" or ch=="O" or ch=="U"):
		vogais= vogais + 1
	else:
		consoantes=consoantes + 1
print(vogais)
print(consoantes)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 18:35:42) 
-- CODE:
from numpy import*
nome=input("digite a string aqui: ").upper()
vogais=0
consoantes=0
for ch in nome:
	if (ch=="A" or ch=="E" or ch=="I" or ch=="O" or ch=="U"):
		vogais= vogais + 1
	else:
		consoantes=consoantes + 1
print(vogais)
print(consoantes)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-04 18:35:43) 
-- CODE:
from numpy import*
nome=input("digite a string aqui: ").upper()
vogais=0
consoantes=0
for ch in nome:
	if (ch=="A" or ch=="E" or ch=="I" or ch=="O" or ch=="U"):
		vogais= vogais + 1
	else:
		consoantes=consoantes + 1
print(vogais)
print(consoantes)
-- EXECUTION TIME:
1.19465
-- TEST CASE 1:
---- input:
cachorro
---- correct output:
3
5
---- user output:
3
5
-- TEST CASE 2:
---- input:
amazonia
---- correct output:
5
3
---- user output:
5
3
-- TEST CASE 3:
---- input:
qwrt
---- correct output:
0
4
---- user output:
digite a string aqui: 0
4
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-04 18:35:52) 
-- CODE:
from numpy import*
nome=input("digite a string aqui: ").upper()
vogais=0
consoantes=0
for ch in nome:
	if (ch=="A" or ch=="E" or ch=="I" or ch=="O" or ch=="U"):
		vogais= vogais + 1
	else:
		consoantes=consoantes + 1
print(vogais)
print(consoantes)
-- EXECUTION TIME:
1.12587
-- TEST CASE 1:
---- input:
cachorro
---- correct output:
3
5
---- user output:
3
5
-- TEST CASE 2:
---- input:
amazonia
---- correct output:
5
3
---- user output:
5
3
-- TEST CASE 3:
---- input:
qwrt
---- correct output:
0
4
---- user output:
0
4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
